# tools

./: .gitignore  CLAUDE.md  README.md  findings.md  index.html  opencode.json  package.json  pnpm-lock.yaml  progress.md  task_plan.md  tsconfig.app.json  vite.config.ts
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-10-react-fluent-ui-refactor-plan.md  2026-05-12-timestamp-tool-plan.md
docs/superpowers/specs/: 2026-05-10-react-fluent-ui-refactor-design.md  2026-05-12-timestamp-tool-design.md
src/: App.tsx  App.vue  main.tsx  style.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  commands.rs  db.rs  domain.rs  lib.rs  mode.rs  translate.rs  tray.rs
src/api/: deepseek.ts
src/components/: AppLayout.tsx  AppLayout.vue  HistoryDialog.tsx  HistoryDialog.vue  InputHistoryDialog.tsx  InputHistoryDialog.vue  PromptDialog.tsx  PromptDialog.vue  Sidebar.tsx  TitleBar.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useWindowSync.ts
src/router/: index.ts
src/views/: DomainView.tsx  FloatingWindow.tsx  FloatingWindow.vue  HomeView.tsx  HomeView.vue  JsonView.tsx  JsonView.vue  SqlView.tsx  SqlView.vue  TimestampView.tsx  ToolStandalone.tsx  ToolStandalone.vue  TranslateView.tsx  TranslateView.vue
