[package]
name = "tools"
version = "0.1.0"
description = "A Tauri v2 desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
