[package]
name = "tools"
version = "0.1.0"
description = "A Tauri v2 desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
rfd = "0.15"
native-tls = "0.2"
x509-parser = "0.16"
